Determining the Javascript

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <header>
       <h1>To-Do List</h1>
-      <form id="taskform">
+      <form id="inputform">
         <input id="userinput" type="text" placeholder="Plans">
         </input>
         <button id="submitbtn" type="submit">Add Task</button>
@@ -26,22 +26,21 @@
     <section class="to-dolist" >
 
       <h2>Tasks</h2>
-        <div id="task">
-          <!--<div class="task">
-           <div class="taskdisplay">
-                    <div>
+        <div id="tasks">
+          <div class="task">
+           <div class="taskdisplay" id="taskDisplay">
+                    <!--<div class = "content">
                       <input 
-                       type="text"
+                       type="text",
                        class="text"
-                       value="My Task"
                        readonly
                     />
                   </div>
-                <div class="actions">
+               <div class="actions">
                      <button class="edit" type="submit">Edit</button>
                      <button class="delete" type="reset">Delete</button>
-                </div>
-            </div>-->
+                </div>-->
+            </div>
           </div>  
     </section>     
   </main>
