--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <form id="inputform">
         <input id="userinput" type="text" placeholder="Plans">
         </input>
-        <button id="submitbtn" type="submit">Add Task</button>
+        <button id="submitbtn" type="submit">+</button>
         </input>
        </form>
   </header>
@@ -28,11 +28,11 @@
       <h2>Tasks</h2>
         <div id="tasks">
           <div class="task">
-           <div class="taskdisplay" id="taskDisplay">
-                    <!--<div class = "content">
+           <!--<div class="taskdisplay" id="taskDisplay">
+                    <div class = "content">
                       <input 
                        type="text",
-                       class="text"
+                       class="text",
                        readonly
                     />
                   </div>
