--- a/index.html
+++ b/index.html
@@ -8,18 +8,36 @@
 
     <link rel="stylesheet" type="text/css" href="./Css/To-do.css">
 
+
 </head>
 <body>
 
   <header>
       <h1>To-Do List</h1>
       <form id="inputform">
-        <input id="userinput" type="text" placeholder="Plans">
-        </input>
+        <input id="userinput" type="text" placeholder="Add a Task">
+        <input id = "date" type="datetime-local"></input>
+      </input>
+        
         <button id="submitbtn" type="submit">+</button>
         </input>
        </form>
   </header>
+
+  <section class="controls" id="controls">
+
+    <div class="filter" id="filter">
+
+      <span id="all" >All</span>
+      <span id="pending" >Pending</span>
+      <span id="completed" >Completed</span>
+      <span id="sort" >Sort</span>
+
+    </div>
+
+    <button class="clearbtn"> Clear All </button>
+
+  </section>
 
   <main>
 
