--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Javascript</title>
 
     <link rel="stylesheet" type="text/css" href="./Css/To-do.css">
+    <link rel = "stylesheet" type="text/css" href = "./Other Material/css/font-awesome.css"
 
 
 </head>
@@ -15,12 +16,18 @@
   <header>
       <h1>To-Do List</h1>
       <form id="inputform">
-        <input id="userinput" type="text" placeholder="Add a Task">
-        <input id = "date" type="datetime-local"></input>
-      </input>
-        
-        <button id="submitbtn" type="submit">+</button>
+
+        <div class="new-task">
+
+        <input id="userinput" type="text" placeholder="Add a Task"/>
+
+         <input id = "datecal" type="date"/>
+
         </input>
+        </div>
+
+        <button id="submitbtn" type="submit">Submit</button>
+
        </form>
   </header>
 
@@ -28,7 +35,7 @@
 
     <div class="filter" id="filter">
 
-      <span id="all" >All</span>
+      <span id="all" class= "active" >All</span>
       <span id="pending" >Pending</span>
       <span id="completed" >Completed</span>
       <span id="sort" >Sort</span>
