--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Javascript</title>
 
     <link rel="stylesheet" type="text/css" href="./Css/To-do.css">
-    <link rel = "stylesheet" type="text/css" href = "./Other Material/css/font-awesome.css"
+    <link rel = "stylesheet" type="text/css" href = "./Other Material/css/font-awesome.css">
 
 
 </head>
@@ -21,7 +21,7 @@
 
         <input id="userinput" type="text" placeholder="Add a Task"/>
 
-         <input id = "datecal" type="date"/>
+         <input img  id = "datecal" type="date"/>
 
         </input>
         </div>
@@ -42,7 +42,7 @@
 
     </div>
 
-    <button class="clearbtn"> Clear All </button>
+    <button class="clearbtn" id="clearbtn"> Clear All </button>
 
   </section>
 
