--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 <body>
 
+  <main>
+
   <header>
       <h1>To-Do List</h1>
       <form id="inputform">
@@ -21,7 +23,7 @@
 
         <input id="userinput" type="text" placeholder="Add a Task"/>
 
-         <input img  id = "datecal" type="date"/>
+         <input id = "datecal" type="date"/>
 
         </input>
         </div>
@@ -31,7 +33,7 @@
        </form>
   </header>
 
-  <section class="controls" id="controls">
+    <section class="controls" id="controls">
 
     <div class="filter" id="filter">
 
@@ -44,13 +46,12 @@
 
     <button class="clearbtn" id="clearbtn"> Clear All </button>
 
-  </section>
+    </section>
 
-  <main>
 
     <section class="to-dolist" >
 
-      <h2>Tasks</h2>
+
         <div id="tasks">
           <div class="task">
            <!--<div class="taskdisplay" id="taskDisplay">
