--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@
     <title>ToDo App</title>
 
     <link rel="stylesheet" type="text/css" href="./Css/To-do.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./Other Material/css/font-awesome.css"
-    />
   </head>
   <body>
     <main>
       <header>
         <div class="todohead">
-          <img id="todoimg" src="./Images/todo.jpg" alt="todo icon" />
+
+          <img id="todoimg" src="./Images/listicon.png" alt="todo icon" />
 
           <h1>To-Do List</h1>
         </div>
@@ -60,7 +56,7 @@
                        readonly
                      />
                     </div>-->
-                    <!--<div class="actions">
+            <!--<div class="actions">
                      <button class="edit" type="submit">Edit</button>
                      <button class="delete" type="reset">Delete</button>
                     </div>
