--- a/index.html
+++ b/index.html
@@ -29,20 +29,26 @@
             />
           </div>
 
+          <div id="actionbutton">
+
           <button id="submitbtn" type="submit">Submit</button>
+          <button class="clearbtn" id="clearbtn">Clear All</button>
+
+          </div>
         </form>
       </header>
 
-      <section class="controls" id="controls">
+      <!--<section class="controls" id="controls">
         <div class="filter" id="filter">
           <span id="all" class="active">All</span>
           <span id="pending">Pending</span>
           <span id="completed">Completed</span>
           <span id="sort">Sort</span>
         </div>
+      </section>-->
 
-        <button class="clearbtn" id="clearbtn">Clear All</button>
-      </section>
+        
+      
 
       <section class="to-dolist">
         <div id="tasks">
